--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="C:\Users\simi\Thinkful challenges\hello-world-js\app.jss"></script>
+<script type="text/javascript" src="app.jss"></script>
 
 </body>
 </html>
