--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<title>Hello World</title>
 </head>
 <body>
-
-<script type="text/javascript" src="C:\Users\simi\Thinkful challenges\hello-world-js\app.jss"></script>
-
+<script type="text/javascript" src="app.jss"></script>
 </body>
 </html>
